[tool.poetry]
name = "celery-proj"
version = "0.1.0"
description = ""
authors = ["Suyash <suyash.d@netwebindia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.2.7"
skylus-openstack-backend = {path = "/home/suyashd95/Projects/tcm-v2/tcm_backend_files/skylus-cloud-backend"}

[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
black = "^23.1.0"
mypy = "^1.1.1"
isort = "^5.12.0"
ruff = "^0.0.254"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
